--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -79,4 +79,24 @@ a {
          hover:border-yellow-500 text-yellow-500
           transition-all duration-300 ease-in cursor-pointer
     }
+    .footer-link {
+        @apply transition-all duration-300 ease-in hover:transform hover:scale-150
+    }
+
+    .form-btn{
+        @apply w-full  border-2 border-white rounded-md py-3 text-yellow-500
+        hover:border-yellow-500 
+    }
+/* 
+    .input-login {
+        @apply bg-gray-50 border border-gray-300 text-gray-900 
+              rounded-lg focus:ring-primary-600 focus:border-primary-600 
+              block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 
+              dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500
+               dark:focus:border-blue-500
+    }
+
+    .input-password {
+        @apply
+    } */
 }
