--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -21,6 +21,7 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 
 }
 
@@ -42,7 +43,7 @@ a {
     }
 
     .container {
-        @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8;
+        @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 ;
     }
 
     .row-sm {
