--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -188,11 +188,11 @@ svg * {
 
 
   .header__link {
-    @apply text-white font-bold transition-colors duration-300 ease-in hover:text-yellow-500
+    @apply text-white font-bold transition-colors duration-300 ease-in hover:text-yellow-300
   }
 
   .header__link__buy {
-    @apply py-3 px-5 rounded-md border-2 border-yellow-500 ms-6 transition-colors duration-300 ease-in
+    @apply py-3 px-5 rounded-md border-2 border-yellow-400 ms-6 transition-colors duration-300 ease-in
   }
 
   .grid__box {
@@ -204,7 +204,8 @@ svg * {
   }
 
   .form-btn {
-    @apply w-2/4 mx-auto block border-2 border-white border-opacity-30 rounded-md py-3 text-yellow-500 hover:border-yellow-500
+    @apply w-2/4 mx-auto block border-2 border-white border-opacity-30 rounded-md py-3
+     text-yellow-300 hover:border-yellow-300 active:scale-95 transition-all duration-300 ease-in
   }
 
   /* 
